INTYGFV-16093: Updated certificate print function